      for exceptionally fast or slow platforms.

      It now applies to checking PDF and HTML versions of the manuals,
      and \sQuote{checking CRAN incoming feasibility}.

      \item \command{R CMD check} can optionally (but included in
      \option{--as-cran}) check whether HTML math rendering \emph{via}
      KaTeX works for the package \file{.Rd} files.
    }
  }

  \subsection{DEPRECATED AND DEFUNCT}{
    \itemize{
      \item \code{default.stringsAsFactors()} is defunct.
   }
  }

  \subsection{BUG FIXES}{
    \itemize{
      \item Hashed \code{environment}s with sizes less than 5 can now grow.
      (Reported to R-devel by Duncan Garmonsway.)

      \item \code{as.character(<Rd>, deparse = TRUE)} failed to
      re-escape curly braces in LaTeX-like text.
      (Reported by Hadley Wickham in \PR{18324}.)

      \item \code{library()} now passes its \code{lib.loc} argument when
      requiring \code{Depends} packages; reported (with fix) in \PR{18331}
      by Mikael Jagan.

      \item \code{R CMD Stangle}: improved message about \sQuote{Output}
      files.

      \item \code{head(x, n)} and \code{tail(x, n)} now signal an error if
      \code{n} is not numeric, instead of incidentally \dQuote{working}
      sometimes returning all of \code{x}.  Reported and discussed by Colin
      Fay, in \PR{18357}.

      \item The \code{"lm"} method for \code{summary()} now gives the
      correct F-statistic when the model contains an offset.  Reported in
      \PR{18008}.

      \item \code{C()} and \code{`contrasts<-`()} now preserve factor
      level names when given a function object (as opposed a function
      name which did preserve names). Reported in \PR{17616}.

      \item \code{c(a=1, 2)[[]]} no longer matches \code{2} but rather
      signals a \emph{classed} error.  Reported and analysed by Davis Vaughan in
      \PR{18367}, a duplicate of \PR{18004}, by Jan Meis et al.
      For consistency, \code{NULL[[]]} is also erroneous now.