@@ -5095,6 +5095,7 @@ Reaction ~ Days + (Days | Subject) + I(Days^2)
 > 
 > 
 > ## Limiting lines on deparse (wishlist PR#8638)
+> Sys.unsetenv("_R_CHECK_BROWSER_NONINTERACTIVE_")
 > op <- options(deparse.max.lines = 3)
 > f <- function(...) browser()
 > do.call(f, mtcars)
@@ -5116,6 +5117,8 @@ Calls: do.call -> <Anonymous>
    19.2, 17.8, 16.4, 17.3, 15.2, 10.4, 10.4, 14.7, 32.4, 30.4, 33.9, 
     ...
 1: do.call(f, mtcars)
+> ## unlimited < 2.3.0
+> options(op)
 > 
 > ## Debugger can handle a function that has a single function call as its body
 > g <- function(fun) fun(1)
@@ -5123,11 +5126,17 @@ Calls: do.call -> <Anonymous>
 > g(function(x) x+1)
 debugging in: g(function(x) x + 1)
 debug: fun(1)
-Browse[2]> 
+Browse[2]> c
 exiting from: g(function(x) x + 1)
 [1] 2
-> options(op)
-> ## unlimited < 2.3.0
+> 
+> ## Trap debugger in non-interactive sessions
+> if (!interactive()) {
++     Sys.setenv("_R_CHECK_BROWSER_NONINTERACTIVE_" = "true")
++     tools::assertError(browser())
++     browser(expr = FALSE) # but this passes (with no output)
++     Sys.unsetenv("_R_CHECK_BROWSER_NONINTERACTIVE_")
++ }
 > 
 > 
 > ## row names in as.table (PR#8652)
